--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -3,7 +3,7 @@ adapter  = Postgresql
 host     = localhost
 username = phalcon
 password = 123456
-name     = phalcon
+name     = Blog
 
 [application]
 controllersDir = app/controllers/
